<resources>
    <string name="app_name">Lime</string>

    <!--Google place search and map api key-->
    <string name="api_key">AIzaSyBkj3ZTizTUmX5iyD-_hmjMsa63Dj7vnKk</string>

    <string name="please_wait">Please wait!</string>
    <string name="cancel_service_call">Cancel service call</string>
    <string name="lets_start">Let\'s Start <b>With Us</b></string>
    <string name="mobile">Mobile No.</string>
    <string name="login">Login</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_partner">Register as Partner</string>
    <string name="back">Back</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_code_desc">Verification code has been sent to your\nmobile number.Please wait\nwe are verifying you.</string>
    <string name="continu">Continue</string>
    <string name="resend_code">Resend Code</string>
    <string name="menu">menu</string>
    <string name="dashboard">Dashboard</string>
    <string name="pick_up">Pickup Location</string>
    <string name="select_pickup">Select Pickup Location</string>
    <string name="drop_in">Drop In Location</string>
    <string name="select_drop">Select Drop Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="proceed">Proceed</string>
    <string name="list_of_truck">List of Truck</string>
    <string name="choose_truck">Choose Truck</string>
    <string name="rates">Rates</string>
    <string name="select_pick_date">Select Pickup Date</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="select_good_type">Select Goods Type</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="weight_ton_kg">Weight (Ton or Kg)</string>
    <string name="check_fare">Check Fare</string>
    <string name="bid_now">Bid Now</string>
    <string name="additional_details">Additional Details</string>
    <string name="offer_price">Offer Your Price</string>
    <string name="mw">MW</string>
    <string name="tnc_offer_bid">It is a long establishment fact that a reader will be distracted by the readable content of a page when looking at its layout</string>
    <string name="send_bid">Send Bid</string>
    <string name="bid_amount">Bid Amount</string>
    <string name="bid_success">Your bid has been placed\nsuccessfully</string>
    <string name="view_bids">View Bids</string>
    <string name="bid_conf">Bid Confirmation</string>
    <string name="driver_selection">You have selected Vehicle with Fare</string>
    <string name="service_type">Service Type</string>
    <string name="trip_rate">Trip Rate</string>
    <string name="tnc">I agree Terms and Conditions</string>
    <string name="confirm_now">Confirm Now</string>
    <string name="confirmation">Confirmation</string>
    <string name="individual">Individual</string>
    <string name="company">Company</string>
    <string name="billing_details">Billing Details</string>
    <string name="busn_name">Business Name</string>
    <string name="busn_email">Business Email</string>
    <string name="contct_name">Contact Name</string>
    <string name="address">Address</string>
    <string name="bsn_doc">Business Documents</string>
    <string name="nat_id">National ID No.</string>
    <string name="certificate">Certificate If Incorporation (Upload Pdf)</string>
    <string name="cons_bill">Consigner Bill</string>
    <string name="book_now">Book Now</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_confirmed">Your Order is Confirmed</string>
    <string name="order_informed">You will be informed by SMS or Call</string>
    <string name="order_summ">Your Order Summary</string>
    <string name="home">Home</string>
    <string name="current_booking">Current Booking</string>
    <string name="history_booking">History Booking</string>
    <string name="about_us">About Us</string>
    <string name="termsandcond"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="india_std_code">+91</string>
    <string name="malawi_std_code">+265</string>
    <string name="mobile_error">Please enter mobile number</string>
    <string name="mobile_format_error">Please enter a valid mobile number</string>
    <string name="enter_otp_error">Please enter given OTP.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="name_error">Please enter a name</string>
    <string name="email_empty_eror">Please enter your email id.</string>
    <string name="email_format_error">Please enter a valid email id.</string>
    <string name="password_error">Please enter a password</string>
    <string name="confirm_password_error">Re-enter your password.</string>
    <string name="confirm_password_same">Both password be same.</string>
    <string name="password_length">Password length must be 6 characters.</string>
    <string name="default_notification_channel_id">Lime_channel</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="check_tnc">Please check Terms and Conditions.</string>
    <string name="choose_vehicle">Choose Vehicle</string>
    <string name="currency">MW </string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="engine_type">Engine Type</string>
    <string name="tnc_required">Please check Terms and Conditions.</string>
    <string name="select_bookingType">Please select one booking type.</string>
    <string name="enter_b_name">Enter Business name.</string>
    <string name="enter_b_email">Enter Business email.</string>
    <string name="enter_c_name">Enter contact name.</string>
    <string name="enter_address">Enter address.</string>
    <string name="enter_natid">Enter Natonal ID.</string>
    <string name="internal_storage">Internal storage</string>
    <string name="no_vehicle_available">Sorry! No vehicle found in your location.</string>
    <string name="select_date">Please select travel date.</string>
    <string name="no_order">Sorry! You didn\'t place any order.</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="history_details">History Details</string>
    <string name="reached_time">Reached Time</string>
    <string name="price">Price: </string>
    <string name="received">Received: </string>
    <string name="truck">Truck: </string>
    <string name="status">Status</string>
    <string name="no_completed_order">You don\'t have any completed order!</string>
    <string name="enter_bid_amount">Please enter some bid amount.</string>
</resources>
