<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_30_dp"
        android:layout_marginLeft="@dimen/dim_20_dp"
        android:layout_marginRight="@dimen/dim_20_dp"
        android:orientation="horizontal">
        <com.lime.android.ui.customview.robotoradiobutton.RobotoRadioButton
            android:id="@+id/rd_individual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/individual"
            app:rd_fontName="lato_regular.ttf"/>

        <com.lime.android.ui.customview.robotoradiobutton.RobotoRadioButton
            android:id="@+id/rd_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:layout_marginStart="@dimen/dim_30_dp"
            app:rd_fontName="lato_regular.ttf"/>
    </RadioGroup>

    <com.lime.android.ui.customview.robotoedittext.RobotoEditText
        android:id="@+id/et_bs_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45_dp"
        android:layout_marginStart="@dimen/spacing_20_dp"
        android:layout_marginEnd="@dimen/spacing_20_dp"
        android:layout_marginTop="@dimen/spacing_10_dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/busn_name"
        android:textColorHint="@color/icon_tint_color"
        android:gravity="center_vertical"
        android:padding="@dimen/spacing_10_dp"
        android:inputType="textPersonName"
        android:textSize="@dimen/dim_15_sp"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        app:et_fontName="lato_regular.ttf"/>

    <com.lime.android.ui.customview.robotoedittext.RobotoEditText
        android:id="@+id/et_bs_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45_dp"
        android:layout_marginStart="@dimen/spacing_20_dp"
        android:layout_marginEnd="@dimen/spacing_20_dp"
        android:layout_marginTop="@dimen/spacing_10_dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/busn_email"
        android:textColorHint="@color/icon_tint_color"
        android:gravity="center_vertical"
        android:padding="@dimen/spacing_10_dp"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/dim_15_sp"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        app:et_fontName="lato_regular.ttf"/>

    <com.lime.android.ui.customview.robotoedittext.RobotoEditText
        android:id="@+id/et_cn_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45_dp"
        android:layout_marginStart="@dimen/spacing_20_dp"
        android:layout_marginEnd="@dimen/spacing_20_dp"
        android:layout_marginTop="@dimen/spacing_10_dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/contct_name"
        android:textColorHint="@color/icon_tint_color"
        android:gravity="center_vertical"
        android:padding="@dimen/spacing_10_dp"
        android:inputType="textPersonName"
        android:textSize="@dimen/dim_15_sp"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        app:et_fontName="lato_regular.ttf"/>

    <com.lime.android.ui.customview.robotoedittext.RobotoEditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45_dp"
        android:layout_marginStart="@dimen/spacing_20_dp"
        android:layout_marginEnd="@dimen/spacing_20_dp"
        android:layout_marginTop="@dimen/spacing_10_dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/address"
        android:textColorHint="@color/icon_tint_color"
        android:gravity="center_vertical"
        android:padding="@dimen/spacing_10_dp"
        android:inputType="textPostalAddress"
        android:textSize="@dimen/dim_15_sp"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        app:et_fontName="lato_regular.ttf"/>

    <com.lime.android.ui.customview.robototextview.RobotoTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/bsn_doc"
        android:textColor="@color/black"
        android:textSize="@dimen/dim_15_sp"
        android:layout_marginStart="@dimen/spacing_20_dp"
        android:layout_marginEnd="@dimen/spacing_20_dp"
        android:layout_marginTop="@dimen/spacing_10_dp"
        app:tv_fontName="lato_bold.ttf"/>

    <com.lime.android.ui.customview.robotoedittext.RobotoEditText
        android:id="@+id/et_nat_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45_dp"
        android:layout_marginStart="@dimen/spacing_20_dp"
        android:layout_marginEnd="@dimen/spacing_20_dp"
        android:layout_marginTop="@dimen/spacing_10_dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/nat_id"
        android:textColorHint="@color/icon_tint_color"
        android:gravity="center_vertical"
        android:padding="@dimen/spacing_10_dp"
        android:inputType="text"
        android:textSize="@dimen/dim_15_sp"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        app:et_fontName="lato_regular.ttf"/>

    <com.lime.android.ui.customview.robototextview.RobotoTextView
        android:id="@+id/tv_certificate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45_dp"
        android:layout_marginStart="@dimen/spacing_20_dp"
        android:layout_marginEnd="@dimen/spacing_20_dp"
        android:layout_marginTop="@dimen/spacing_10_dp"
        android:hint="@string/certificate"
        android:textColorHint="@color/icon_tint_color"
        android:gravity="center_vertical"
        android:textSize="@dimen/dim_15_sp"
        android:textColor="@color/colorPrimary"
        android:drawableStart="@drawable/ic_upload_document_icon"
        app:et_fontName="lato_regular.ttf"/>

    <com.lime.android.ui.customview.robototextview.RobotoTextView
        android:id="@+id/tv_cons_bill"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45_dp"
        android:layout_marginStart="@dimen/spacing_20_dp"
        android:layout_marginEnd="@dimen/spacing_20_dp"
        android:hint="@string/cons_bill"
        android:textColorHint="@color/icon_tint_color"
        android:gravity="center_vertical"
        android:textSize="@dimen/dim_15_sp"
        android:textColor="@color/colorPrimary"
        android:drawableStart="@drawable/ic_upload_document_icon"
        app:et_fontName="lato_regular.ttf"/>

    <com.lime.android.ui.customview.robotobutton.RobotoButton
        android:id="@+id/btn_book"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_45_dp"
        android:background="@drawable/primary_button_selector"
        android:layout_marginTop="@dimen/dim_40_dp"
        android:layout_marginStart="@dimen/dim_20_dp"
        android:layout_marginEnd="@dimen/dim_20_dp"
        android:textAllCaps="true"
        android:gravity="center"
        android:text="@string/book_now"
        android:textColor="@color/white"
        android:textSize="@dimen/dim_15_sp"
        android:outlineProvider="bounds"
        android:elevation="@dimen/spacing_5_dp"
        android:translationZ="@dimen/spacing_5_dp"
        android:stateListAnimator="@null"
        app:bt_fontName="lato_regular.ttf"/>

</LinearLayout>
