<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.login.LoginActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.48"
        android:background="@mipmap/login_banner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.52"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.lime.android.ui.customview.robototextview.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lets_start"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_20_sp"
            app:tv_fontName="lato_regular.ttf"
            android:layout_marginTop="@dimen/dim_20_dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_20_dp"
            android:layout_marginTop="@dimen/dim_25_dp"
            android:layout_marginEnd="@dimen/dim_20_dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/dim_45_dp"
                android:layout_weight="0.25"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical"
                android:padding="@dimen/spacing_10_dp">

                <ImageView
                    android:layout_width="@dimen/dim_35_dp"
                    android:layout_height="@dimen/dim_30_dp"
                    android:src="@drawable/ic_malawi_flag_icon" />

                <com.lime.android.ui.customview.robototextview.RobotoTextView
                    android:id="@+id/tv_std_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_5_dp"
                    android:gravity="center_vertical"
                    android:text="@string/india_std_code"
                    android:textColor="@color/icon_tint_color"
                    android:textSize="@dimen/dim_15_sp"
                    app:tv_fontName="lato_regular.ttf" />
            </LinearLayout>

            <com.lime.android.ui.customview.robotoedittext.RobotoEditText
                android:id="@+id/et_mobile_number"
                android:layout_width="0dp"
                android:layout_height="@dimen/dim_45_dp"
                android:layout_marginStart="@dimen/spacing_10_dp"
                android:layout_weight="0.70"
                android:background="@drawable/edit_text_bg"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="@dimen/spacing_10_dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/icon_tint_color"
                android:textSize="@dimen/dim_15_sp"
                app:et_fontName="lato_regular.ttf">

            </com.lime.android.ui.customview.robotoedittext.RobotoEditText>
        </LinearLayout>

        <com.lime.android.ui.customview.robotobutton.RobotoButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_45_dp"
            android:background="@drawable/primary_button_selector"
            android:layout_marginTop="@dimen/dim_20_dp"
            android:textAllCaps="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/dim_15_sp"
            android:outlineProvider="bounds"
            android:elevation="@dimen/spacing_5_dp"
            android:translationZ="@dimen/spacing_5_dp"
            android:stateListAnimator="@null"
            app:bt_fontName="lato_regular.ttf"
            android:layout_margin="@dimen/dim_20_dp"/>

        <com.lime.android.ui.customview.robototextview.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/dont_have_acc"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_15_sp"
            android:layout_marginTop="@dimen/dim_10_dp"
            app:tv_fontName="lato_regular.ttf"/>

        <com.lime.android.ui.customview.robototextview.RobotoTextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:layout_marginTop="@dimen/spacing_5_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_20_sp"
            app:tv_fontName="lato_regular.ttf"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_or_divider"
            android:layout_marginTop="-15dp"/>

        <com.lime.android.ui.customview.robototextview.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_partner"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_15_sp"
            android:layout_marginTop="-10dp"
            app:tv_fontName="lato_regular.ttf"/>
    </LinearLayout>

</LinearLayout>
