<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".screens.otp.OtpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back"
                android:padding="@dimen/spacing_10_dp"
                android:src="@drawable/ic_back_black" />

            <com.lime.android.ui.customview.robototextview.RobotoTextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/img_back"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="@dimen/dim_20_sp"
                app:tv_fontName="lato_regular.ttf" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.lime.android.ui.customview.robototextview.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/verification_code"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_20_sp"
            app:tv_fontName="lato_bold.ttf" />

        <com.lime.android.ui.customview.robototextview.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_10_dp"
            android:gravity="center_horizontal"
            android:text="@string/verify_code_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_15_sp"
            app:tv_fontName="lato_regular.ttf" />

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_30_dp"
            android:background="@color/white"
            android:inputType="number"
            android:itemBackground="@drawable/edit_text_bg"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_30_sp"
            android:textStyle="normal"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemSpacing="6dp"
            app:lineColor="@android:color/transparent"
            app:lineWidth="0dp"
            app:state_filled="true"
            app:viewType="rectangle" />

        <com.lime.android.ui.customview.robotobutton.RobotoButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_45_dp"
            android:layout_margin="@dimen/dim_20_dp"
            android:background="@drawable/primary_button_selector"
            android:elevation="@dimen/spacing_5_dp"
            android:gravity="center"
            android:outlineProvider="bounds"
            android:stateListAnimator="@null"
            android:text="@string/continu"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/dim_15_sp"
            android:translationZ="@dimen/spacing_5_dp"
            app:bt_fontName="lato_regular.ttf" />

        <com.lime.android.ui.customview.robototextview.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/resend_code"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_15_sp"
            app:tv_fontName="lato_bold.ttf" />
    </LinearLayout>

</LinearLayout>
